--- a/templates/index.html
+++ b/templates/index.html
@@ -1,70 +1,105 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE HTML>
+<html lang="en">
 <head>
+    <title>Active Stream</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}">
+    <!-- <link rel="stylesheet" type="text/css" href="../static/css/custom.css">  -->
     <script sync src="https://platform.twitter.com/widgets.js"></script>
-
-    <script>
-
-      window.onload = (function(){
-
-        var tweet = document.getElementById("tweet");
-        var id = tweet.getAttribute("tweetID");
-
-        twttr.widgets.createTweet(
-          id, tweet, 
-          {
-            conversation : 'none',    // or all
-            cards        : 'visible',  // or visible 
-            linkColor    : '#cc0000', // default is blue
-            theme        : 'light'    // or dark
-          })
-        .then (function (el) {
-          el.contentDocument.querySelector(".footer").style.display = "none";
-        });
-
-      });
-
-    </script>
-
-
-    <style>
-
-      #tweet {
-        width: 400px !important;
-      }
-
-      #tweet iframe {
-        border: none !important;
-        box-shadow: none !important;
-      }
-
-    </style>
-
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 
 </head>
 
-
 <body>
+    
+    <div class="container-fluid">
 
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Active Stream</h1>
+            </div>
+            <!-- /.col-lg-12 -->
+        </div>
+        
+        <div class="row">
+            <!-- Annotation container -->
+            <div class="col-lg-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Annotation</div>
+                    <div class="panel-body fixed-panel">
 
+                        <div id="tweet_container">
+                            <p id="placeholder">Waiting for tweets...</p>
+                        </div>
+                    </div>
 
-<div id="tweet" tweetID={{tweet_id}}></div>
+                    <div class="panel-footer">
+                        <div class="btn-group">
+                            <button id="relevant" type="button" class="btn btn-success">relevant</button>
+                            <button id="irrelevant" type="button" class="btn btn-danger">irrelevant</button>
+                            <button id="skip" type="button" class="btn btn-default">skip</button>
+                            <button id="refresh" type="button" class="btn btn-default">refresh</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-<form action="{{ url_for('index') }}" method="post">
-    <input class="btn btn-primary" type="submit" value="Yes", name="response">
-    <input class="btn btn-primary" type="submit" value="No", name="response">
-</form>
+            <!--Keyword container -->
+            <div class="col-lg-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Keywords</div>
+                    <div class="panel-body fixed-panel">
+
+                        <form id="main_input_box">
+                            <div class="pull-left">
+                                <input type="text" class ="form-control" id="custom_textbox" name="Item" placeholder="Enter new keyword here">
+                            </div>
+                                <input type="submit" value="Add" class="btn btn-success">
+                        </form>
+                        <form>
+                            <ol class="list-group list_of_items">
+                            </ol>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+            <!-- Suggestions container -->
+            <div class="col-lg-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Keyword Suggestions</div>
+                    <div class="panel-body fixed-panel">
+                        <ul class="list-group" id="suggestions">
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+         <div class="row">
+             <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Database Stats</div>
+                    <div class="panel-body">
+                        <ul class="list-group" id="stats">
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+           
+    </div>
 
 
 </body>
 </html>
-
-
