minor interface updates

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -11,3 +11,13 @@ body {
     max-width: 100%;
     word-wrap: break-word;
 }
+.huge {
+  font-size: 35px;
+  text-align: right;
+}
+.green {
+    color: green;
+}
+.red {
+    color: green;
+}
