--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}">
-    <!-- <link rel="stylesheet" type="text/css" href="../static/css/custom.css">  -->
+    <link rel="stylesheet" type="text/css" href="../static/css/custom.css">
     <script sync src="https://platform.twitter.com/widgets.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
@@ -54,7 +54,7 @@
             </div>
 
             <!--Keyword container -->
-            <div class="col-lg-4">
+            <div class="col-lg-2">
                 <div class="panel panel-default">
                     <div class="panel-heading">Keywords</div>
                     <div class="panel-body fixed-panel">
@@ -74,7 +74,7 @@
                 </div>
 
             <!-- Suggestions container -->
-            <div class="col-lg-4">
+            <div class="col-lg-2">
                 <div class="panel panel-default">
                     <div class="panel-heading">Keyword Suggestions</div>
                     <div class="panel-body fixed-panel">
@@ -83,18 +83,104 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Stats  container -->
+            <div class="col-lg-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Database Stats</div>
+                    <div class="panel-body fixed-panel">
+                        <!--
+                        <ul class="list-group" id="stats">
+                        </ul>
+                        -->
+                        
+                        <div class="panel-group">
+
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="panel panel-info">
+                                        <div class="panel-heading">TOTAL</div>
+                                        <div class="panel-body">
+                                            <div id="total" class="huge">0</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6">
+                                    <div class="panel panel-danger">
+                                        <div class="panel-heading">MISSED</div>
+                                        <div class="panel-body">
+                                            <div id="missed" class="huge">0</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="panel panel-success">
+                                        <div class="panel-heading">ANNOTATED</div>
+                                        <div class="panel-body">
+                                            <div id="annotated" class="huge">0</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6">
+                                    <div class="panel panel-warning">
+                                        <div class="panel-heading">CLASSIFIED</div>
+                                        <div class="panel-body">
+                                            <div id="classified" class="huge">0%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading">CLF PERFORMANCE</div>
+                                        <div class="panel-body">
+                                            <div id="performance" class="huge">NA</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6">
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading">OTHER</div>
+                                        <div class="panel-body">
+                                            <div class="huge">0</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
         </div>
 
          <div class="row">
-             <div class="col-lg-12">
+
+            <!-- Additional container -->
+            <div class="col-lg-12">
                 <div class="panel panel-default">
-                    <div class="panel-heading">Database Stats</div>
+                    <div class="panel-heading">More Stuff</div>
                     <div class="panel-body">
-                        <ul class="list-group" id="stats">
+                        <ul class="list-group">
                         </ul>
                     </div>
                 </div>
             </div>
+
+
+
         </div>
 
            
