status monitoring partly works

--- a/templates/index.html
+++ b/templates/index.html
@@ -148,9 +148,9 @@
 
                                 <div class="col-lg-6">
                                     <div class="panel panel-default">
-                                        <div class="panel-heading">OTHER</div>
+                                        <div class="panel-heading">Rate</div>
                                         <div class="panel-body">
-                                            <div class="huge">0</div>
+                                            <div id="rate" class="huge">0/s</div>
                                         </div>
                                     </div>
                                 </div>
