some fixes on the interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -186,11 +186,20 @@
          <div class="row">
 
             <!-- Additional container -->
-            <div class="col-lg-12">
+            <div class="col-lg-6">
                 <div class="panel panel-default">
-                    <div class="panel-heading">More Stuff</div>
-                    <div class="panel-body">
+                    <div class="panel-heading">Tweet Rate</div>
+                    <div class="panel-body fixed-panel">
                         <div class="graph"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Messages</div>
+                    <div class="panel-body fixed-panel">
+                        <ul class="list-group" id="messages"></ul>
                     </div>
                 </div>
             </div>
