fixed hidden y axis

--- a/templates/index.html
+++ b/templates/index.html
@@ -189,8 +189,8 @@
             <div class="col-lg-6">
                 <div class="panel panel-default">
                     <div class="panel-heading">Rate Tweets/second</div>
-                    <div class="panel-body">
-                        <div class="graph" id="rate_graph"></div>
+                    <div class="panel-body fixed-panel" id="rate_graph_panel">
+                        <div class="graph"></div>
                     </div>
                 </div>
             </div>
