clf perfomance in table

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -21,6 +21,10 @@ body {
   font-size: 35px;
   text-align: right;
 }
+.bigger {
+  font-size: 17px;
+  text-align: left;
+}
 .green {
     color: green;
 }
