--- a/templates/index.html
+++ b/templates/index.html
@@ -156,7 +156,20 @@
                                                 <div class="panel panel-default">
                                                     <div class="panel-heading">CLF PERFORMANCE</div>
                                                     <div class="panel-body">
-                                                        <div id="performance" class="huge">NA</div>
+                                                        <div class="bigger">
+                                                            <table style="width:100%">
+                                                              <tr>
+                                                                <th>Precision</th>
+                                                                <th>Recall</th> 
+                                                                <th>F-1 Score</th>
+                                                              </tr>
+                                                              <tr id="performance">
+                                                                  <td>NA</td>
+                                                                  <td>NA</td>
+                                                                  <td>NA</td>
+                                                              </tr>
+                                                            </table>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
