--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -63,7 +63,7 @@ body {
 
 .loader {
     border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
+    border-top: 16px solid #b3e6ff; /* Blue */
     border-radius: 50%;
     width: 100px;
     height: 100px;
