remove nonsense clf performance measures

--- a/templates/index.html
+++ b/templates/index.html
@@ -154,22 +154,9 @@
 
                                             <div class="col-lg-6">
                                                 <div class="panel panel-default">
-                                                    <div class="panel-heading">CLF PERFORMANCE</div>
+                                                    <div class="panel-heading">% RELEVANT</div>
                                                     <div class="panel-body">
-                                                        <div class="bigger">
-                                                            <table style="width:100%">
-                                                              <tr>
-                                                                <th>Precision</th>
-                                                                <th>Recall</th> 
-                                                                <th>F-1 Score</th>
-                                                              </tr>
-                                                              <tr id="performance">
-                                                                  <td>NA</td>
-                                                                  <td>NA</td>
-                                                                  <td>NA</td>
-                                                              </tr>
-                                                            </table>
-                                                        </div>
+                                                        <div id="classified" class="huge">0</div>
                                                     </div>
                                                 </div>
                                             </div>
